--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,53 @@
-bqplot
-ipycanvas>=0.9.1
-ipyevents>=2.0.1
-ipyleaflet
-ipympl>=0.8.2
-ipywidgets>=8.0.0,<9
-jupyterlab~=3.4.7
-jupyterlab-drawio
+# Core modules (mandatory)
+jupyterlite-core==0.5.0
+jupyterlab~=4.3.4
+notebook~=7.3.2
+
+
+# Python kernel (optional)
+jupyterlite-pyodide-kernel==0.5.0
+
+# JavaScript kernel (optional)
+jupyterlite-javascript-kernel==0.3.0
+
+# Language support (optional)
 jupyterlab-language-pack-fr-FR
 jupyterlab-language-pack-zh-CN
-jupyterlab-fasta>=3,<4
-jupyterlab-geojson>=3,<4
-jupyterlab-tour
+
+# P5 kernel (optional)
+jupyterlite-p5-kernel==0.1.0
+
+# JupyterLab: Fasta file renderer (optional)
+jupyterlab-fasta>=3.3.0,<4
+# JupyterLab: Geojson file renderer (optional)
+jupyterlab-geojson>=3.4.0,<4
+# JupyterLab: guided tour (optional)
+# TODO: re-enable after https://github.com/jupyterlab-contrib/jupyterlab-tour/issues/82
+# jupyterlab-tour
+# JupyterLab: dark theme
+jupyterlab-night
+# JupyterLab: Miami nights theme (optional)
 jupyterlab_miami_nights
-jupyterlite==0.1.0b14
-jupyterlite-p5-kernel==0.1.0a12
-jupyterlite-xeus-lua==0.3.1
-jupyterlite-xeus-wren==0.2.1
-jupyterlite-xeus-sqlite==0.2.1
+
+# Python: ipywidget library for Jupyter notebooks (optional)
+ipywidgets>=8.1.3,<9
+# Python: ipyevents library for Jupyter notebooks (optional)
+ipyevents>=2.0.1
+# Python: interative Matplotlib library for Jupyter notebooks (optional)
+ipympl>=0.8.2
+# Python: ipycanvas library for Jupyter notebooks (optional)
+ipycanvas>=0.9.1
+# Python: ipyleaflet library for Jupyter notebooks (optional)
+ipyleaflet
+
+# Python: plotting libraries (optional)
 plotly>=5,<6
-theme-darcula
+bqplot
+
+############################
+# project specific modules #
+############################
+jupyterlab-language-pack-de-DE
+pandas
+# jinja2 is an optional dependency of pandas for DataFrame.style
+jinja2
